# tv-goldviewfx

./: .dockerignore  .eslintignore  .gitignore  .npmignore  .tmp-frontend-delta.Dockerfile  .tmp-frontend-nomad.Dockerfile  .tmp-ghcr-smoke.Dockerfile  AGENT.md  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  activity.md  articles.json  convex_local_backend.sqlite3  eslint.config.js  fix_plan.md  index.ts  initial_cleanup.ts  package.json  playwright.config.ts  prd.md  schema.sql  tradingview.html
backend/rl-service/: .coverage  README.md  coverage-critical.xml  ops_checklist.md  pyproject.toml
backend/rl-service/docs/: environment.md
backend/rl-service/scripts/: check_critical_coverage.py  critical_coverage_thresholds.json
backend/rl-service/src/: config.py  rl_logging.py  schemas.py  server.py
backend/rl-service/src/api/: datasets.py  evaluations.py  health.py  inference.py  monitoring.py  training.py
backend/rl-service/src/data/: bingx_loader.py  dataset_builder.py  feature_inputs.py
backend/rl-service/src/data_lake/: normalized_lake.py
backend/rl-service/src/envs/: market_env.py
backend/rl-service/src/features/: extractors.py  feature_registry.py  technical_pipeline.py
backend/rl-service/src/models/: action_mapper.py  artifact_loader.py  registry.py
backend/rl-service/src/monitoring/: drift.py
backend/rl-service/src/reports/: evaluation_report.py
backend/rl-service/src/training/: continuous.py  cost_engine.py  default_strategies.py  evaluation.py  metrics.py  nautilus_backtest.py  promotion.py  (+4 more)
backend/rl-service/tests/: __init__.py  conftest.py
(+620 files in other folders)
